# ur5_needle_insertion

./: .gitmodules  README.md
final_project/: package.xml  setup.py
final_project/final_project/arm_bringup/: CMakeLists.txt  package.xml
final_project/final_project/arm_bringup/launch/: ur5.launch.xml
final_project/final_project/arm_bringup/rviz/: urdf_config.rviz
final_project/final_project/arm_description/: CMakeLists.txt  package.xml
final_project/final_project/arm_description/urdf/: ur5.urdf.xacro
hospital_models/: CMakeLists.txt  package.xml
hospital_models/models/ElderMalePatient/: model.sdf
hospital_models/models/ElderMalePatient/meshes/: Divider.stl  Needle_Tube.stl
hospital_models/models/OpScrubs/: model.sdf
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: ur5_moveit.launch.py
path_planning/scripts/analysis/: plot_trajectories.py
path_planning/scripts/cpp/: data_recorder.cpp  ee_velocity_tracker.cpp  motion_planning_service.cpp  move_ur5.cpp
path_planning/scripts/python/: collision_publisher.py  data_recorder.py  move_ur5.py
path_planning/srv/: PlanMotion.srv  StartRecording.srv
path_planning/worlds/: surgical_world.world
robot_needle_insertion/: package.xml  setup.cfg  setup.py
ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5.ros2_control.xacro  ur5.srdf  ur5.urdf.xacro
ur5_moveit_config/cpp/: move_ur5.cpp
ur5_robot_description/: CMakeLists.txt  package.xml
ur5_robot_description/config/: physical_parameters.yaml  ur5_controllers.yaml  visual_parameters.yaml
ur5_robot_description/launch/: ur5_gazebo.launch.py  ur5_moveit.launch.py  ur5_rviz.launch.py
ur5_robot_description/rviz/: config.rviz
ur5_robot_description/urdf/: ur5.xacro  ur5_commented.xacro
ur5_robot_description/worlds/: surgical_world.world
